--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -14,6 +14,10 @@ header{
 	margin-bottom: 1em;
 }
 
+.paciente-invalido{
+	background-color: red;
+}
+
 header h1{
 	font-size: 2em;
 	display:inline-block;
